cmake_minimum_required(VERSION 3.14)
project(polar_grid)

find_package(autoware_cmake REQUIRED)
autoware_package(USE_AMENT_EX)

ament_ex_find_package(Qt5 REQUIRED Core Widgets)
set(QT_LIBRARIES Qt5::Widgets)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_definitions(-DQT_NO_KEYWORDS)

ament_ex_add_library(polar_grid SHARED
  src/polar_grid_display.cpp
  src/polar_grid_display.hpp
)

target_link_libraries(polar_grid
  ${QT_LIBRARIES}
)

pluginlib_export_plugin_description_file(rviz_common plugins/plugin_description.xml)

ament_ex_package(
  INSTALL_TO_SHARE
  icons
  plugins
)
